@@ -1,5 +1,7 @@
 User-visible changes in version 1.3.0  ():
 * simple-variable ~NUM can be followed by domain, e.g.: %f=Linear(~3[2:5], ~8)
+  and also default parameters can have domain (...shape=~0.5 [0:1],...),
+  Voigt and PseudoVoigt have now shape with default domain [0:1]
 * if variable has a domain (example: $a = ~1.2 [-3:4]) then
    "$a = ~3" keeps domain of $a (also "a={$a}; $a=~{a}" preserves domain)
    "$a = ~3 [:]" unsets domain
